<resources>
    <string name="app_name">Octopus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="app_display">My Experiments with Food</string>

    <string name="facebook_app_id">1870268266350152</string>
    <string name="fb_login_protocol_scheme">fb1870268266350152</string>

    <string name="guest_login">Guest Peek</string>
    <string name="image_recipe">Image for the Recipe</string>

    <string name="recipe_contents">Contents of this recipe are :  %s</string>
    <string name="recipe_target">This recipe is targeted for : %s</string>
    <string name="recipe_apt_for">This recipe is apt for : %s</string>
    <string name="recipe_category">Category: %s</string>
    <string name="recipe_price">Cost is : Rs %f</string>

    <string name="submit_recipe">Submit</string>

    <string name="add_recipe_title">Add recipe</string>
    <string name="add_image">Recipe Image: </string>
    <string name="add_recipe_name">Recipe Name: </string>
    <string name="add_recipe_target">Recipe Target: </string>
    <string name="add_recipe_apt_for">Apt For :</string>
    <string name="add_recipe_contents">Recipe contents: </string>
    <string name="add_recipe_category">Recipe Category: </string>
    <string name="add_recipe_price">Recipe Cost: </string>

</resources>
