<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_recycler_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/tv_title"
        android:paddingTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/add_recipe_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_image"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:paddingLeft="16dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/husky"
        android:text="@string/add_image"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <EditText
        android:id="@+id/et_image"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toRightOf="@id/tv_image"/>

    <TextView
        android:id="@+id/tv_recipe_name"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/husky"
        android:text="@string/add_recipe_name"
        app:layout_constraintTop_toBottomOf="@id/tv_image"/>

    <EditText
        android:id="@+id/et_recipe_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:minWidth="200dp"
        app:layout_constraintLeft_toRightOf="@id/tv_recipe_name"
        app:layout_constraintTop_toBottomOf="@id/tv_image"/>

    <TextView
        android:id="@+id/tv_target"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/husky"
        android:text="@string/add_recipe_target"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"/>

    <EditText
        android:id="@+id/et_target"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:minWidth="200dp"
        app:layout_constraintLeft_toRightOf="@id/tv_target"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"/>

    <TextView
        android:id="@+id/tv_apt_for"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/husky"
        android:text="@string/add_recipe_apt_for"
        app:layout_constraintTop_toBottomOf="@id/tv_target"/>

    <EditText
        android:id="@+id/et_apt_for"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:minWidth="200dp"
        app:layout_constraintLeft_toRightOf="@id/tv_apt_for"
        app:layout_constraintTop_toBottomOf="@id/tv_target"/>

    <TextView
        android:id="@+id/tv_contents"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/husky"
        android:text="@string/add_recipe_contents"
        app:layout_constraintTop_toBottomOf="@id/tv_apt_for"/>

    <EditText
        android:id="@+id/et_contents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:minWidth="200dp"
        app:layout_constraintLeft_toRightOf="@id/tv_contents"
        app:layout_constraintTop_toBottomOf="@id/tv_apt_for"/>

    <TextView
        android:id="@+id/tv_category"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/husky"
        android:text="@string/add_recipe_category"
        app:layout_constraintTop_toBottomOf="@id/tv_contents"/>

    <EditText
        android:id="@+id/et_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:minWidth="200dp"
        app:layout_constraintLeft_toRightOf="@id/tv_category"
        app:layout_constraintTop_toBottomOf="@id/tv_contents"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/husky"
        android:text="@string/add_recipe_price"
        app:layout_constraintTop_toBottomOf="@id/tv_category"/>

    <EditText
        android:id="@+id/et_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:minWidth="200dp"
        app:layout_constraintLeft_toRightOf="@id/tv_price"
        app:layout_constraintTop_toBottomOf="@id/tv_category"/>

    <Button
        android:id="@+id/btn_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:background="@drawable/rounded_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_price"
        android:text="@string/submit_recipe"/>


</android.support.constraint.ConstraintLayout>